# donats-backend

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  start.sh
apps/account/: admin.py  forms.py  models.py
apps/account/migrations/: 0001_initial.py
apps/auth/: serializers.py  urls.py  views.py
apps/jars/: admin.py  apps.py  filters.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  testManager.py  urls.py  utils.py  views.py  workers.py
apps/jars/migrations/: 0001_initial.py  0002_alter_jar_active.py  0002_alter_jar_options_jar_dd_order.py  0002_jar_date_closed_alter_jar_date_added_and_more.py  0003_alter_jar_options.py  0004_remove_jar_active_jar_img_alt_jar_title_img_and_more.py  0005_alter_jar_options_alter_jartag_options_and_more.py  0006_alter_jar_title_img.py  0007_alter_jar_title_img.py  0008_alter_jaralbum_options_jar_description_and_more.py  0009_alter_jar_monobank_id.py  0010_amountofjar_incomes.py  0011_alter_amountofjar_date_added_and_more.py  (+1 more)
apps/main_page/: managers.py  models.py  urls.py  views.py
apps/user/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
config/: .env.sample
shared/: mixins.py
shared/cloudinary/: utils.py
zcy_donation/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
zcy_donation/settings/: __init__.py  base.py  celery_redis_settings.py  development.py  drf_settings.py  production.py
zcy_donation/zcy_donation/: settings.py
(+9 files in other folders)
