[tool.poetry]
name = "zcy-donation"
version = "0.1.0"
description = "The project to donate to the war effort"
authors = ["team1-backend"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14.0"
mysqlclient = "^2.2.1"
python-dotenv = "^1.0.0"
cloudinary = "^1.37.0"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^23.5"
django-admin-sortable2 = "^2.1.10"
cffi = "^1.16.0"
wheel = "^0.42.0"
pymysql = "^1.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
